[project]
name = "cellsepi-drawing"
version = "0.1.0"
description = "CellSePiDrawing provides the image editing view for the CellSePi project."
readme = "README.md"
requires-python = ">=3.10, <=3.12"
authors = [
    { name = "Florian Hock"},
    { name = "Jenna Ahlvers"}
]
dependencies = [
    "flet>=0.84.0",
    "pillow==12.2.0",
    "tifffile>=2026.3.3",
    "numpy==1.26.4",
    "opencv-python-headless>=4.13.0.92"
]

[tool.setuptools]
py-modules = ["drawing_util", "drawing_tool", "image_editing_view"]
license-files = ["licence"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
