[project]
name = "cellsepi-drawing"
version = "0.1.0"
description = "CellSePiDrawing provides the image editing view for the CellSePi project."
readme = "README.md"
requires-python = ">=3.10, <3.13"
authors = [
    { name = "Florian Hock"},
    { name = "Jenna Ahlvers"}
]
dependencies = [
    "flet==0.85.3",
    "pillow==12.2.0",
    "tifffile>=2026.3.3",
    "numpy==2.1.0",
    "opencv-python-headless==4.13.0.92",
    "uvicorn==0.40.0",
    "fastapi==0.135.4",
    "lz4==4.4.5"
]

[tool.setuptools]
py-modules = ["drawing_util", "drawing_tool", "image_editing_view", "media_server"]
license-files = ["licence"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
